converted guid from int to long, spotbugs rpt minor changes.